# rust_clean_arch_generator

./: .gitignore  Cargo.toml  README.md  template_config.toml
src/: main.rs
template/: container.rs.hbs  i_interactor.rs.hbs  i_repository.rs.hbs  interactor_impl.rs.hbs  repository_impl.rs.hbs  use_case.rs.hbs
templates/: container.rs.hbs
templates/translations/application/: mod.rs
templates/translations/application/di/: container.rs
templates/translations/application/interactor/: i_translations_interactor.rs.hbs  mod.rs
templates/translations/application/use_case/: mod.rs
templates/translations/domain/: mod.rs
templates/translations/domain/interactor/: mod.rs
templates/translations/domain/repository/: mod.rs
templates/translations/infrastructure/: mod.rs
templates/translations/infrastructure/data_access/: mod.rs  translations_data_source.rs.hbs
templates/translations/infrastructure/repository/: mod.rs  translations_repository_impl.rs.hbs
templates/translations/interface/controller/: mod.rs  translations_controller.rs.hbs
