[package]
name = "template_generator"
version = "0.1.5"
authors = ["Jalalus"] 
edition = "2021"
description = "A Rust CLI tool for generating Clean Architecture project boilerplates."
license = "MIT" # Or your chosen license
repository = "https://github.com/calalalizade/rust_clean_arch_generator"

categories = ["development-tools", "command-line-utilities"]

keywords = ["rust", "clean-architecture", "boilerplate", "generator"] 

[dependencies]
handlebars = "5.1.2"
include_dir = "0.7.3"
serde = "1.0.203"
serde_json = "1.0.117"
toml = "0.8.14"

[[bin]]
name = "my_template" 
path = "src/main.rs"

include = ["template_config.toml"] 

[package.metadata.cargo-add-assets]
templates = ["templates/*"]
"template_config.toml" = ["template_config.toml"]

